added image to the home screen need to implement search criteria with search button

--- a/app/views/homeScreenS1.html
+++ b/app/views/homeScreenS1.html
@@ -1,8 +1,11 @@
 <div class="container">
-  <div>
-    
+  <!-- Displaying Images with search testbox and search button -->
+  <div ng-app="3TttApp" ng-controller="homeScreen">
+  <img ng-src="{{imageSource1}}">
   </div>
-  
+  <div>
+    dnalj
+  </div>
 </div>
 
 
