--- a/app/views/homeScreenS1.html
+++ b/app/views/homeScreenS1.html
@@ -1,10 +1,7 @@
 <div class="container">
   <!-- Displaying Images with search testbox and search button -->
   <div ng-app="3TttApp" ng-controller="homeScreen">
-  <img ng-src="{{imageSource1}}">
-  </div>
-  <div>
-    dnalj
+  <img class="img-rounded homeScreenImage" ng-src="{{imageSource1}}" >
   </div>
 </div>
 
