--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -89,3 +89,9 @@ body {
   width: 100%;
   height: 400px;
 }
+
+.searchBar{
+  padding-top: 40px;
+  padding-bottom: 100px;
+  text-align: center;
+}
