--- a/app/views/homeScreenS1.html
+++ b/app/views/homeScreenS1.html
@@ -1,7 +1,18 @@
+
+
 <div class="container">
   <!-- Displaying Images with search testbox and search button -->
   <div ng-app="3TttApp" ng-controller="homeScreen">
-  <img class="img-rounded homeScreenImage" ng-src="{{imageSource1}}" >
+  <img class="img-rounded homeScreenImage" ng-src="{{imageSource}}" alt="GroupImage" >
+  </div>
+  
+  <div  ng-controller="homeScreen" class="searchBar">
+  <input type="text" ng-model="enteredSearchValue">
+  <button type="button" ng-click="fundSearchValue(enteredSearchValue)">Search</button>
+    <h3>Result is:</h3>
+    <ul>
+      <li ng-repeat="result in results">Serial number: {{result.serial}} | Owner: {{result.owner}}</li>
+    </ul>
   </div>
 </div>
 
