added a div with COurse details and displayed course image and Details

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -99,3 +99,15 @@ body {
 .red {
     border:2px solid red;
 }
+
+.courseDetailsText{
+  text-align: center;
+}
+
+.courseDetailsList{
+  background-color: rgb(250, 248, 248);
+}
+.CourseImageWithDetails{
+  background-color: yellow;
+  display: inline-block;
+}
