--- a/app/views/homeScreenS1.html
+++ b/app/views/homeScreenS1.html
@@ -1,5 +1,3 @@
-
-
 <div class="container">
   <!-- Displaying Images with search testbox and search button -->
  
@@ -20,31 +18,30 @@
     </ul>
   </div>
   </form>
+
+  <div class="courseDetailsList">
+    <div class="courseDetailsText">
+      <h3>Courser Details</h3>
+    </div>
+    <div class="CourseImageWithDetails">
+      <div>
+        <img ng-src="{{CourseImage}}" alt="JavaCourseImage">
+      </div>
+      <!-- <div>
+        <h3>Courese Name: Java</h3>
+        <h3>Trainer: Ramesh</h3>
+        <h3>Starting Date: 08/05/16</h3>
+        <h3>Timing: 9am</h3>
+      </div> -->
+
+      <div ng-repeat="x in CourseDetailsjson">
+        {{x.CourseName}}<br/>
+        {{x.Trainer}}<br/>
+        {{x.StartingDate}}<br/>
+        {{x.Timing}}
+      </div>
+    </div>
+  </div>
+
 </div>
 
-
-
-<!-- <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
- -->
