--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -106,8 +106,10 @@ body {
 
 .courseDetailsList{
   background-color: rgb(250, 248, 248);
+  padding-bottom: 20px;
 }
 .CourseImageWithDetails{
   background-color: yellow;
   display: inline-block;
+  padding-bottom: 10px;
 }
