added same file multiple times

--- a/app/views/homeScreenS1.html
+++ b/app/views/homeScreenS1.html
@@ -23,6 +23,7 @@
     <div class="courseDetailsText">
       <h3>Courser Details</h3>
     </div>
+    <!-- Core Java Traning -->
     <div class="CourseImageWithDetails">
       <div>
         <img ng-src="{{CourseImage}}" alt="JavaCourseImage" ng-click="alertFun()">
@@ -32,6 +33,47 @@
         {{x.Duration}}<br/>
       </div>
     </div>
+    <!-- Advanced Java Traning -->
+     <div class="CourseImageWithDetails">
+      <div>
+        <img ng-src="{{CourseImage}}" alt="JavaCourseImage" ng-click="alertFun()">
+      </div>
+      <div ng-repeat="x in CourseDetailsjson" ng-click="alertFun()" >
+        {{x.CourseName}}<br/>
+        {{x.Duration}}<br/>
+      </div>
+    </div>
+    <!-- hibernate  Traning -->
+    <div class="CourseImageWithDetails">
+      <div>
+        <img ng-src="{{CourseImage}}" alt="JavaCourseImage" ng-click="alertFun()">
+      </div>
+      <div ng-repeat="x in CourseDetailsjson" ng-click="alertFun()" >
+        {{x.CourseName}}<br/>
+        {{x.Duration}}<br/>
+      </div>
+    </div>
+    <!-- struts  Traning -->
+    <div class="CourseImageWithDetails">
+      <div>
+        <img ng-src="{{CourseImage}}" alt="JavaCourseImage" ng-click="alertFun()">
+      </div>
+      <div ng-repeat="x in CourseDetailsjson" ng-click="alertFun()" >
+        {{x.CourseName}}<br/>
+        {{x.Duration}}<br/>
+      </div>
+    </div>
+    <!-- spring  Traning -->
+    <div class="CourseImageWithDetails">
+      <div>
+        <img ng-src="{{CourseImage}}" alt="JavaCourseImage" ng-click="alertFun()">
+      </div>
+      <div ng-repeat="x in CourseDetailsjson" ng-click="alertFun()" >
+        {{x.CourseName}}<br/>
+        {{x.Duration}}<br/>
+      </div>
+    </div>
+
   </div>
 
 </div>
