updated ng repeat for execution

--- a/app/views/homeScreenS1.html
+++ b/app/views/homeScreenS1.html
@@ -74,6 +74,14 @@
       </div>
     </div>
 
+    <!-- ng repeat wedjets -->
+    <div ng-repeat= "X in CourseDetailsjson">
+         <div style="width:200px;height:200px;background:{{X.value}}">
+            <label>{{X.color}}</label>
+
+         </div>
+    </div>
+
   </div>
 
 </div>
