--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -105,11 +105,12 @@ body {
 }
 
 .courseDetailsList{
-  background-color: rgb(250, 248, 248);
+  background-color: rgb(228, 228, 228);
+  padding-top: 20px;
   padding-bottom: 20px;
 }
 .CourseImageWithDetails{
-  background-color: yellow;
   display: inline-block;
-  padding-bottom: 10px;
+  padding-right: 10px;
+  padding-left: 20px;
 }
