--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -105,11 +105,13 @@ body {
 }
 
 .courseDetailsList{
+  cursor:pointer;
   background-color: rgb(228, 228, 228);
   padding-top: 20px;
   padding-bottom: 20px;
 }
 .CourseImageWithDetails{
+  cursor:pointer;
   display: inline-block;
   padding-right: 10px;
   padding-left: 20px;
