--- a/app/views/homeScreenS1.html
+++ b/app/views/homeScreenS1.html
@@ -89,5 +89,19 @@
          </div>
     </div>
   </div>
+
+<div id="test">
+  
+</div>
+  <div id="courseDevContainer">
+    <div id="nextImage">NI</div>
+    <div id="previousImage">PI</div>
+    <div id="courseListDetails">
+      <li>
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/advancejava.jpg">
+      </li>
+    </div>
+  </div>
 </div>
 
