--- a/app/views/homeScreenS1.html
+++ b/app/views/homeScreenS1.html
@@ -97,9 +97,41 @@
     <div id="nextImage">NI</div>
     <div id="previousImage">PI</div>
     <div id="courseListDetails">
-      <li>
+      <li class="imgSize1">
         <!-- <a href="#"> -->
           <img  class="imgSize" ng-src="images/advancejava.jpg">
+      </li>
+      <li class="imgSize1">
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/advancejava.jpg">
+      </li>
+      <li class="imgSize1">
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/angularjs.png">
+      </li>
+      <li class="imgSize1">
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/angularjs.png">
+      </li>
+      <li class="imgSize1">
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/angularjs.png">
+      </li>
+      <li class="imgSize1">
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/angularjs.png">
+      </li>
+      <li class="imgSize1">
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/angularjs.png">
+      </li>
+      <li class="imgSize1">
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/angularjs.png">
+      </li>
+      <li class="imgSize1">
+        <!-- <a href="#"> -->
+          <img  class="imgSize" ng-src="images/angularjs.png">
       </li>
     </div>
   </div>
